#43: Some experiments with factory methods.